--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_tabs">TabsActivity</string>
     <string name="section_format">Section: %1$d</string>
+
+    <string name="developer_name">David Rodríguez</string>
+    <string name="developer_mail">david.davisro@gmail.com</string>
 </resources>
